--- a/bot/.env
+++ b/bot/.env
@@ -1,1 +1,5 @@
 BOT_API_KEY=SUPERMEGASECRETKEY
+POSTGRES_USER=username
+POSTGRES_PASSWORD=passofuser
+POSTGRES_DB=db_name
+DB_URL="host=localhost dbname=db_name sslmode=disable"
