--- a/bot/.env
+++ b/bot/.env
@@ -3,3 +3,4 @@ POSTGRES_USER=username
 POSTGRES_PASSWORD=passofuser
 POSTGRES_DB=db_name
 DB_URL="host=localhost dbname=db_name sslmode=disable"
+LOG_URL='log.txt'
